--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -31,7 +31,7 @@
 			<a href="/vod/packages" class="bttn" style="width: 150px;">Packages</a><br />
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
 			<br /><br />
-			<a href="/admin" class="bttn" style="width: 150px;">Admin</a><br />
+			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
 			<a href="#" class="bttn" style="width: 150px;">Logout</a>
 		</div>
 		{% block content %}{% endblock %}
