--- a/Packager/Templates/css/uploadify.css
+++ b/Packager/Templates/css/uploadify.css
@@ -29,7 +29,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	border-radius: 30px;
 	border: 2px solid #808080;
 	color: #FFF;
-	font: bold 12px Arial, Helvetica, sans-serif;
+	font-family: 'Anaheim', sans-serif;
 	text-align: center;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	width: 100%;
@@ -58,11 +58,11 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	margin-bottom: 1em;
 }
 .uploadify-queue-item {
-	background-color: #F5F5F5;
+	background-color: #c6c6c6;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	font: 11px Verdana, Geneva, sans-serif;
+	font-family: 'Anaheim', sans-serif;
 	margin-top: 5px;
 	max-width: 350px;
 	padding: 10px;
