--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -32,7 +32,7 @@
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
-			<a href="#" class="bttn" style="width: 150px;">Logout</a>
+			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
 		</div>
 		{% block content %}{% endblock %}
 		<div class="clear"></div>
