--- a/Packager/Templates/new_package_group.html
+++ b/Packager/Templates/new_package_group.html
@@ -30,7 +30,7 @@
 	</head>
 	<body>
 		<form id="new_package_group">{% csrf_token %}
-			<h1>New package group</h1>
+			<h1 style="padding: 0px;">New package group</h1>
 			<center>
 			<table>
 				<tr>
@@ -39,7 +39,7 @@
 				</tr>
 				<tr>
 					<td>Description</td>
-					<td><textarea id="description" name="description" rows="4" cols="40"></textarea></td>
+					<td><textarea id="description" name="description" rows="2" cols="40"></textarea></td>
 				</tr>
 			</table>
 			</center>
