--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -30,6 +30,7 @@
 			<a href="/vod/customers" class="bttn" style="width: 150px;">Customers</a><br />
 			<a href="/vod/packages" class="bttn" style="width: 150px;">Packages</a><br />
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
+			<a href="/vod/logs" class="bttn" style="width: 150px;">Logs</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
 			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
