--- a/Packager/Templates/css/main.css
+++ b/Packager/Templates/css/main.css
@@ -358,3 +358,15 @@ select {
  font-size: 37px;
  font-weight: normal;
 }
+.slctLogFile {
+ background-color: #ffffca;
+ width: 100%;
+ font-family: 'Anaheim', sans-serif;
+ font-size: 17px;
+ padding-left: 7px;
+}
+#ifLog {
+ width: 100%;
+ height: 350px;
+ background-color: #fff;
+}
