--- a/Packager/Templates/item.html
+++ b/Packager/Templates/item.html
@@ -74,8 +74,8 @@
 	</table>
 </div>
 <div class="grid_3" style="padding-top: 5px;">
-	<table width="100%" style="color: #fff;">
-		<tr><td>Export to:</td></tr>
+	<table class="tblItemExport">
+		<tr><td class="font">Export to:</td></tr>
 		<tr>
 			<td>
 				<select multiple="multiple" class="slctCusFE" name="customers_for_export" id="customers_for_export">
@@ -85,7 +85,7 @@
 				</select>
 			</td>
 		</tr>
-		<tr><td colspan="2" style="padding-top: 3px;">Package group:</td></tr>
+		<tr><td colspan="2" class="font" style="padding-top: 3px;">Package group:</td></tr>
 		<tr>
 			<td>
 				<select id="package_group" class="slctPkgGrp" style="width: 100%;">
