--- a/Packager/Templates/view_logs.html
+++ b/Packager/Templates/view_logs.html
@@ -3,15 +3,7 @@
 {% block title %}Logs{% endblock %}
 
 {% block content %}
-<script>
-	$(document).ready(function() {
-		$("#ifLog").attr('src', "/logs/" + $("#logfile").val());
-	});
-	
-	function changeIframeSrc() {
-		$("#ifLog").attr('src', "/logs/" + $("#logfile").val());
-	}
-</script>
+<script type="text/javascript" src="/js/logs.js"></script>
 
 <table style="width: 100%;">
 	<tr><td style="padding-top: 10px;">
@@ -29,5 +21,5 @@
 {% endblock %}
 
 {% block action_bar %}
-<a href="#" onclick="javascript:actionRefreshView();" class="bttn icon refresh">Refresh<a>
+<a href="#" onclick="javascript:actionRefreshIFrame();" class="bttn icon refresh">Refresh<a>
 {% endblock %}
