--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
 </head>
 
-<body style="font-family: 'Anaheim', sans-serif;">
+<body style="font-family: 'Carrois Gothic', sans-serif;">
 	<center>
 		<table>
 			<tr><td class="center" style="padding-top:27px;">
