--- a/Packager/Templates/view_logs.html
+++ b/Packager/Templates/view_logs.html
@@ -1,6 +1,8 @@
 {% extends "base_views.html" %}
 
-{% block title %}Logs{% endblock %}
+{% block title %}
+<a href="/vod/logs">Logs</a> | <a href="/vod/daemons">Daemons</a>
+{% endblock %}
 
 {% block content %}
 <script type="text/javascript" src="/js/logs.js"></script>
