--- a/Packager/Templates/base_views.html
+++ b/Packager/Templates/base_views.html
@@ -17,10 +17,19 @@
 <body>
 	<div class="container_12">
 		<div class="grid_12">
-			<h1 class="headerTitle">
-				<img src="/images/PBTV.png" width="55" height="55">
-				<a href="#" style="padding-left: 10px;">PlayboyTV LA: VOD Packager</a>
-			</h1>
+		    <table style="color: #fff; border: 0px solid white; width: 100%;">                                                
+		        <tr>                                                                                                          
+		            <td>                                                                                                      
+		                <h1 class="headerTitle">                                                                              
+		                    <img src="/images/PBTV.png" width="55" height="55">                                               
+		                    <a href="/" style="padding-left: 10px;">PlayboyTV LA: VOD Packager</a>                            
+		                </h1>                                                                                                 
+		            </td>                                                                                                     
+		            <td class="tdUserInfo" style="text-align: right;">                                                        
+		        	Welcome, <a href="#">{{user.username}}</a> | <a href="/logout">logout</a>                             
+		    	    </td>                                                                                                     
+		        </tr>                                                                                                         
+		    </table> 
 		</div>
 		<div class="clear"></div>
 		<div class="grid_3" id="navbar">
@@ -28,8 +37,9 @@
 			<a href="/vod" class="bttn" style="width: 150px;">Items</a><br />
 			<a href="/vod/customers" class="bttn" style="width: 150px;">Customers</a><br />
 			<a href="/vod/packages" class="bttn" style="width: 150px;">Packages</a><br />
+			<a href="/vod/delivery/" class="bttn" style="width: 150px;">Delivery</a><br />
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
-			<a href="/vod/logs" class="bttn" style="width: 150px;">Logs</a><br />
+			<a href="/vod/logs" class="bttn" style="width: 150px;">Run time</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
 			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
