--- a/Packager/Templates/css/dashboard.css
+++ b/Packager/Templates/css/dashboard.css
@@ -12,8 +12,10 @@ th {
  background-color: transparent;
  border-left: 0px;
  border-top: 0px;
+ vertical-align: middle;
 }
 .verticalText {
+ font-family: 'Gafata', sans-serif; 
  text-align: center;
  vertical-align: middle;
  width: 15px;
@@ -28,7 +30,7 @@ th {
 }
 .tblDashboard {
  color: #fff;
- font-family: 'Anaheim', sans-serif;
+ font-family: 'Gafata', sans-serif;
 }
 .dashboardTitle {
  font-family: 'Anaheim', sans-serif;
@@ -40,9 +42,15 @@ th {
  border: 1px solid white;
  padding-top: 5px;
  padding-left: 10px;
+ vertical-align: middle;
 }
 .tdItemTitle {
  border: 1px solid white;
- padding-left: 3px;
- padding-right: 3px;
+ padding-left: 5px;
+ padding-right: 5px;
+ vertical-align: middle;
+ font-size: 13px;
 }
+.trBrandSeparator {
+ color: #f87a0b;
+ }
