--- a/Packager/Templates/view_dashboard.html
+++ b/Packager/Templates/view_dashboard.html
@@ -3,7 +3,6 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-
 <link rel="stylesheet" href="/css/dashboard.css" />
 <script type="text/javascript" src="/js/dashboard.js"></script>
 <!-- TOOLTIPS -->
@@ -14,25 +13,24 @@
 <script src="/js/chili-1.7.pack.js" type="text/javascript"></script>
 
 {% for package_group in packages_groups %}
-<span class="dashboardTitle">Package group: 
+<span class="dashboardTitle">Group: 
 	<select id="package_group" name="package_group" class="slctPkgGrp" onchange="javascript:onChangePackageGroup();">
 		{% for pkgg in packages_group_list %}
 		<option value="{{pkgg.id}}">{{pkgg.name}}</option>
 		{% endfor %}
 	</select>
 </span>
-
 <fieldset id="dashboardicons">
-<table class="tblDashboard">
+<table id="tblDashboard" class="tblDashboard">
 	<tbody>
-		<tr>
+		<tr brand="upperRow">
 			<th class="thUpperLeft"></th>
 			{% for customer in customers %}
 			<th style="border: 1px solid white;"><div class="verticalText">{{customer.name}}</div></th>
 			{% endfor %}
 		</tr>
 		{% for item in matriz %}
-		<tr id="item_{{item.0.0}}">
+		<tr id="item_{{item.0.0}}" brand="{{item.0.2}}" class="trItemTitle">
 			<td class="tdItemTitle">{{item.0.1}}</td>
 			{% for customer in customers %}
 			<td id="customer_{{customer.id}}" class="tdPackageStatus" style="text-align:right;">
@@ -44,14 +42,12 @@
 	</tbody>
 </table>
 </fieldset>
-
 <!-- HIDDEN FIELDS -->
 <input type="hidden" id="package_group_id" name="package_group_id" value="{{package_group.id}}" />
 <input type="hidden" id="package_group_name" name="package_group_name" value="{{package_group.name}}" />
 <input type="hidden" id="package_group_desc" name="package_group_desc" value="{{package_group.description}}" />
-
+<input type="hidden" id="total_customers" name="total_customers" value="{{customers|length}}" />
 {% endfor %}
-
 <!-- VIEW'S ICONOGRAPHY -->
 <fieldset id="iconography">
 	<table id="tblIconography">
@@ -66,10 +62,9 @@
 		<tr>
 	</table>
 </fieldset>
-
 <script>
-//var json_string = "{\"items\": [{% for item in matriz %}{\"item\":{{item.0.0}}, \"pkgs\":[{% for pkg in item.1 %}{\"pkg_id\":{{pkg.0}}, \"customer_id\":{{pkg.1}}, \"pkg_status\":\"{{pkg.2}}\"},{% endfor %}{\"pkg_id\":0, \"customer_id\":0, \"pkg_status\":\"\"}]},{% endfor %}{\"item\":0, \"pkgs\":[]}]}";
-var json_string = "{\"items\": [{% for item in matriz %}{\"item\":{{item.0.0}}, \"pkgs\":[{% for pkg in item.1 %}{\"pkg_id\":{{pkg.0}}, \"customer_id\":{{pkg.1}}, \"pkg_status\":\"{{pkg.2}}\", \"pkg_error\":\"{{pkg.3}}\"},{% endfor %}{\"pkg_id\":0, \"customer_id\":0, \"pkg_status\":\"\"}]},{% endfor %}{\"item\":0, \"pkgs\":[]}]}";
+    var json_items_string = "{ {% for item in items %} \"{{item.id}}\": \"{{item.status}}\", {% endfor %} \"0\": \"0\" }";
+    var json_string = "{\"items\": [{% for item in matriz %}{\"item\":{{item.0.0}}, \"pkgs\":[{% for pkg in item.1 %}{\"pkg_id\":{{pkg.0}}, \"customer_id\":{{pkg.1}}, \"pkg_status\":\"{{pkg.2}}\", \"pkg_error\":\"{{pkg.3}}\"},{% endfor %}{\"pkg_id\":0, \"customer_id\":0, \"pkg_status\":\"\"}]},{% endfor %}{\"item\":0, \"pkgs\":[]}]}";
 </script>
 {% endblock %}
 
