--- a/Packager/Templates/css/main.css
+++ b/Packager/Templates/css/main.css
@@ -268,7 +268,7 @@ span.vrstatus_Q {
  height: 16px;
 }
 span.vrstatus_F {
- background-image: url(/images/icons/film_link.png);
+ background-image: url(/images/icons/accept.png);
  width: 16px;
  height: 16px;
 }
