--- a/Packager/Templates/view_daemons.html
+++ b/Packager/Templates/view_daemons.html
@@ -9,6 +9,14 @@
 <br />
 <table class="tblDaemonsStatus">
 	<tr style="border-bottom: 1px solid white;">
+	    <td ><b>QPull</b> <span class="processDescription">Process pending rendition queues.</span></td>
+	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QPull_status }}" /></td>
+	</tr>
+	<tr style="border-bottom: 1px solid white;">
+	    <td ><b>QPurge</b> <span class="processDescription">Process pending rendition queues.</span></td>
+	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QPurge_status }}" /></td>
+	</tr>
+	<tr style="border-bottom: 1px solid white;">
 	    <td ><b>QImport</b> <span class="processDescription">Process pending rendition queues.</span></td>
 	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QImport_status }}" /></td>
 	</tr>
