--- a/Packager/Templates/view_delivery.html
+++ b/Packager/Templates/view_delivery.html
@@ -42,7 +42,7 @@
 	{% for item in items %}
 	    <tr id="item_{{item.id}}" brand="{{item.brand}}" class="trItemTitle">
 	        <td class="tdItemTitle">
-		    <a href="http://10.3.0.166/vod/item/{{item.id}}">{{item.name}}</a>
+		    <a href="/vod/item/{{item.id}}">{{item.name}}</a>
 <!--	    	    <a href="javascript: selectItemFormExport('{{item.id}}');">{{item.name}}</a> -->
 	    	</td>
 	        {% for customer in customers %}
