--- a/Packager/Templates/item.html
+++ b/Packager/Templates/item.html
@@ -74,7 +74,9 @@
 		</tr>
 	</table>
 	<a href="#" class="bttn icon fork" onclick="javascript:actionForceToBeDoneItem();">Force to be Done</a>
+	<a href="#" class="bttn icon fork" onclick="javascript:actionUnfilledImageProfile();">Unfilled Image Profile</a>
 	<br /><br />
+
 </div>
 <div class="grid_3" style="padding-top: 5px;">
 	<table class="tblItemExport">
