--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -43,6 +43,7 @@
 			<a href="/vod/delivery/" class="bttn" style="width: 150px;">Delivery</a><br />
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
 			<a href="/vod/logs" class="bttn" style="width: 150px;">Run time</a><br />
+			<a href="/vod/bulk_dely/" class="bttn" style="width: 150px;">Automatic Dely</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
 			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
